# sov-kernel-monster

./: .gitignore  ADR_PHASE_MIRROR_GOVERNANCE.md  AGENT_WORKFLOW_ALLOWLIST.md  BIFROST_PERSONAS_DEPLOY.md  BOB_TWIN_AGENT5_INTEGRATION.md  BUILD_VALIDATION.md  CMakeLists.fortran_quantum  CMakeLists.txt  COLD_BOOT_TEST.md  CertificationLicense.txt  DELIVERABLES.txt  EnterpriseDeploymentGuide.md  FORMAL_METHODS_PAPER.md  HAIKU_MANIFEST.md  INTEGRATION_OVERVIEW.md  LANGUAGE_BINDINGS_MANIFEST.md  LICENSE-FSL  Makefile  Makefile.bob  ORGANIZATION.md  PHASE_3_WORM_ATTESTATION.jsonl  PHASE_4_5_INTEGRATION_SUMMARY.md  PublicationChecklist.txt  QUICKSTART_FORTRAN_QUANTUM.md  README.md  SNAPKITTY_ANTHROPIC_FAMILY.md  SOVEREIGN_INTEGRITY_ARCHITECTURE.md  SOVEREIGN_NODE_KEY.md  SOVMETAAGENT_INTEGRATION.md  SOV_KERNEL_MONSTER_COMPLETE_AUDIT.md  SOV_KERNEL_MONSTER_STATUS.md  SPRINT_2_ROADMAP.md  THEOREM3_INTEGRATION_STATUS.txt  THEOREM_CATALOG.txt  ZMOS_FRAMEWORK.md  avr_cold_boot_ledger.jsonl  bob_twin_agent5_test.sh  boolean_spectral_lens.f90  build.py  build_monster.sh  (+11 more)
benchmarks/: CMakeLists.txt  bob_benchmarks.c
docs/: index.html  (+10 more)
haskell/: AToKio.hs  AToKioLinear.hs  AToKioMonad.hs  AgentGoals.hs  AgentMemory.hs  AhmadBotAgent.hs  AuditTrailExporter.hs  CMakeLists.txt  ComplianceFramework.hs  ConsensusTypes.hs  ConsensusVoting.hs  GravityModule.hs  INTEGRATION_GUIDE.md  ManifoldGeometry.hs  PHASE_1_INTEGRATION_SUMMARY.md  ProductionSimulator.hs  ProductionSimulatorLite.hs  QuantumModule.hs  RelativityModule.hs  SimulationStep.hs  SovKangarooShake.hs  SpacetimeAgent.hs  SpacetimeEnvironment.hs  THEOREM3_INTEGRATION.md  WormholeModule.hs  liquidlean-theorem3.cabal  package.yaml  stack.yaml  test-atokio-integration.hs
haskell/LiquidLean/: AdaptiveVerifiedRuntime.hs  QuantumPiper.hs
haskell/LiquidLean/Jacobian/: CrackTheorem3.hs  IBMQuantum.hs  MoraLocal.hs  NegativeResult.hs  QuantumChipInterface.hs  QuantumFortranBridge.hs  SingularityAnalysis.hs  Theorem3Entry.hs  Theorem3Kernel.hs
haskell/LiquidLean/QuantumPiper/: IBMGranite.hs  Isabelle.hs  Stages.hs  Terminal.hs  WebGPU.hs
haskell/test/: SpecTheorem3.hs
janet/: CMakeLists.txt  bob_quantum.janet
julia/: CMakeLists.txt  bob_quantum.jl
odin/: CMakeLists.txt  bob_quantum.odin
qataaum/: ARCHITECTURE_SPEC.md  BENCHMARK_REPORT.md  BOB.md  CLEAN_ROOM_BOUNDARY.md  Cargo.toml  FINAL_REPORT.md  INTEGRATION_PLAN.md  OPENQASM_COMPATIBILITY_MATRIX.md  PROCESSOR_CAPABILITY_MATRIX.md  PRODUCTION_HARDENING_HANDOFF.md  README.md  RESEARCH_LEDGER.md  SECURITY.md  TEST_REPORT.md
qataaum/ADRs/: ADR-000-architecture-foundation.md  ADR-001-IR-Family-Design.md  ADR-002-Type-System-Design.md  ADR-003-Optimization-Pass-Architecture.md  ADR-004-Hardware-Abstraction-Layer.md  ADR-005-Formal-Verification-Strategy.md  ADR-006-Simulation-Architecture.md  ADR-007-Routing-and-Placement.md  ADR-008-IBM-i-Integration.md  ADR-009-Pulse-Abstraction.md  ADR-010-Execution-Receipt-System.md
qataaum/benchmarks/: Cargo.toml  compiler_benchmarks.rs  simulator_benchmarks.rs
qataaum/benchmarks/benches/: runtime_benchmarks.rs
qataaum/compiler/ir/: Cargo.toml
qataaum/compiler/parser/: Cargo.toml
qataaum/compiler/passes/: Cargo.toml
qataaum/compiler/routing/: Cargo.toml
qataaum/compiler/semantic/: Cargo.toml
qataaum/docs/: API_REFERENCE.md  QUICKSTART.md  RUSTDOC_GUIDE.md  USER_GUIDE.md
qataaum/examples/: bell_pair.qasm  ghz_state.qasm
qataaum/personas/: Personas.lean  README.md  personas.pl
qataaum/proofs/prolog/: README.md  quantum_monad.pl  shrew_observer.pl
qataaum/proofs_stage/: .gitignore  .zenodo.json  BUILD_COMPLETE.txt  CITATION.cff  CLAIM_BOUNDARY.md  FORMAL_PAPER.md  GKN_SYSTEM_SUMMARY.txt  LICENSE  PROVENANCE.md  Project.lisp  README.md  RECEIPTS.md  code_completion_engine.py  dev_pattern_analyzer.py  forge_code_generator.py  gkn_code_example_index.py  gkn_formal_court_system.py  gkn_formal_court_system_fixed.txt  graveyard.forth  intelligent_editor_lsp.py  pattern_metrics_dashboard.py  proof_templates.yaml  test_full_system.py  test_index.json  test_patterns.json
qataaum/proofs_stage/.sovereign/: worm-hook.json
qataaum/proofs_stage/coq/: SovereignJudge.v
qataaum/proofs_stage/datalog/: cap_transfer.dl  resonance.dl  system_invariants.dl
qataaum/proofs_stage/docs/: SNAPKITTY_EDUCATION_CURRICULUM.md  SNAPKITTY_LINGUISTICS_GEOMETRY_CURRICULUM.md  SOVEREIGN_MATHEMATICS_333.md
qataaum/proofs_stage/haskell/: README.md  no_cloning.hs  quantum_monad.hs  thermal.hs
qataaum/proofs_stage/haskell-liquid/: snapkitty-liquid.cabal
qataaum/proofs_stage/idris-gate/: idris-gate.ipkg
qataaum/proofs_stage/idris2/: SovereignNoCloning.idr
qataaum/proofs_stage/ip-protection/: CARTO_VAULT_CONSENSUS_2026-07-11.md  SNAPKITTYWEST_108_FINGERPRINT_DECODE.md  SNAPKITTYWEST_PUBLIC_NOTICE.md  SNAPKITTY_IP_LICENSING_PROPOSAL.md
qataaum/proofs_stage/lean4/: OmegaLanglands.lean  PhinaryContraction.lean  README.md  SovereignFingerprint.lean  SovereignJudge.lean  SovereignMorphism.lean
qataaum/proofs_stage/prolog/: README.md  edaulc_verify.pl  quantum_monad.pl  shrew_observer.pl
qataaum/runtime/ibmi-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
qataaum/runtime/shadow-rpg-q/: Cargo.toml  README.md
qataaum/simulator/densitymatrix/: Cargo.toml
qataaum/simulator/statevector/: Cargo.toml
qataaum/spec/fsm/: HYBRID_FSM.md
qataaum/spec/ir/: QATAAUM_IR.md
qataaum/spec/metaqasm4/: GRAMMAR.md
qataaum/spec/shadow-rpg-q/: GRAMMAR.md
qataaum/tests/: Cargo.toml  comprehensive_test_suite.rs
qataaum/verification/lean4/: README.md  lakefile.lean
qataaum/verification/liquid-haskell/: README.md  qataaum-refinements.cabal
r/: CMakeLists.txt  bob_quantum.R
racket/: CMakeLists.txt  bob_quantum.rkt
rtx/: CMakeLists.txt
rtx/include/: sov_rtx.h
rtx/src/c--/: scheduler.cmm
rtx/windows_rtx/: cuda_driver_loader.c  main.c  power_handler.c
rust/algebraic-core/: Cargo.toml
rust/trajectory-export/: Cargo.toml
smalltalk/: BobQuantum.st  CMakeLists.txt
wasm/: Cargo.toml  lib.rs
zig/: CMakeLists.txt
zig/src/: bob_quantum.zig
(+232 files in other folders)
