cabal-version:      2.4
name:               liquidlean-theorem3
version:            0.1.0.0
synopsis:           Jacobian Conjecture Crack — Theorem 3 in Haskell
description:
    Rigorous formalization of the Jacobian Conjecture attack via genus-0 forcing.
    Core pipeline: singularity analysis → δ-invariants (Mora) → Plücker genus formula.
    Integrated with sov-kernel-monster quantum kernel via energy accounting and WORM attestation.

license:            LicenseRef-SSL
license-file:       ../../LICENSE
author:             Ahmad Ali Parr
maintainer:         ahmedparr93@gmail.com
copyright:          2026 SnapKitty Collective
category:           Math
build-type:         Simple
extra-source-files:
    INTEGRATION_GUIDE.md

common warnings
    ghc-options: -Wall -Wcompat -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wredundant-constraints
                 -Wno-name-shadowing

-- LIBRARY DISABLED (missing dependencies: aeson, bytestring in imports)
-- Uncomment when dependencies resolved
-- library
--     import:           warnings
--     exposed-modules:
--         LiquidLean.Jacobian.Theorem3Kernel
--     hs-source-dirs:   .
--     build-depends:
--         base >=4.16 && <5

-- ── AToKio: Bounded Async Runtime for Ahmad_bot ───────────────────────────────────

executable atokio
  main-is:          AToKio.hs
  build-depends:    base >=4.16 && <5, time >=1.9
  default-language: Haskell2010
  hs-source-dirs:   .
  ghc-options:      -threaded -rtsopts -O2 -main-is AToKio

executable atokio-monad
  main-is:          AToKioMonad.hs
  build-depends:    base >=4.16 && <5, time >=1.9
  default-language: Haskell2010
  hs-source-dirs:   .
  ghc-options:      -O2 -main-is AToKioMonad

executable atokio-linear
  main-is:          AToKioLinear.hs
  build-depends:    base >=4.16 && <5, linear-base >=0.4, vector >=0.12, bytestring >=0.10
  default-language: Haskell2010
  hs-source-dirs:   .
  ghc-options:      -XLinearTypes -XQualifiedDo -O2 -main-is AToKioLinear

executable test-atokio
  main-is:          test-atokio-integration.hs
  other-modules:    AToKio
  build-depends:    base >=4.16 && <5, time >=1.9
  default-language: Haskell2010
  hs-source-dirs:   .
  ghc-options:      -threaded -rtsopts -O2

executable production-simulator
  main-is:          ProductionSimulatorLite.hs
  build-depends:    base >=4.16 && <5,
                    random >=1.2
  default-language: Haskell2010
  hs-source-dirs:   .
  ghc-options:      -threaded -rtsopts -O2

