[package]
name = "quantum-wasm"
version = "1.0.0"
edition = "2021"
description = "BOB Quantum Civilization Engine — Rust WASM bridge porting bob_*.f90 math"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
