[package]
name = "qataaum-benchmarks"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "compiler_benchmarks"
harness = false

[[bench]]
name = "simulator_benchmarks"
harness = false

[[bench]]
name = "runtime_benchmarks"
harness = false

[dependencies]
qataaum-parser = { path = "../compiler/parser" }
qataaum-semantic = { path = "../compiler/semantic" }
qataaum-ir = { path = "../compiler/ir" }
qataaum-passes = { path = "../compiler/passes" }
qataaum-routing = { path = "../compiler/routing" }
qataaum-statevector = { path = "../simulator/statevector" }
qataaum-densitymatrix = { path = "../simulator/densitymatrix" }
shadow-rpg-q = { path = "../runtime/shadow-rpg-q" }
criterion = { version = "0.5", features = ["html_reports"] }