[package]
name = "qataaum-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
qataaum-parser = { path = "../compiler/parser" }
qataaum-semantic = { path = "../compiler/semantic" }
qataaum-ir = { path = "../compiler/ir" }
qataaum-passes = { path = "../compiler/passes" }
qataaum-statevector = { path = "../simulator/statevector" }

# Made with Bob