[package]
name = "qataaum-ir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
qataaum-parser = { path = "../parser" }
qataaum-semantic = { path = "../semantic" }
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
proptest.workspace = true

# Made with Bob