cabal-version: 3.0
name: snapkitty-liquid
version: 0.1.0.0
build-type: Simple

library
  exposed-modules:
    SnapKitty.Liquid.Core
    SnapKitty.Liquid.ThermalWindow
    SnapKitty.Liquid.ERE5
    SnapKitty.Liquid.QuantumBranch4
    SnapKitty.Liquid.NoCloningWitness
    SnapKitty.Liquid.Receipt
    SnapKitty.Liquid.LiquidEngine
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base >=4.16 && <5,
    ghc-prim,
    type-equality
