[package]
name = "shadow-rpg-q"
version = "0.1.0"
edition = "2021"
authors = ["QATAAUM Project"]
description = "IBM i-style quantum job control runtime (original, not an IBM product)"
license = "MIT"

[dependencies]
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"